# People_counting_CNN_UWB

./: .gitignore  Lucrare_POPOVICI_2022.docx  README.md  classification_humans_cnn.py  classification_humans_ml.py  create_json_files.py  main.py  make_predictions.py  postgresql_operations.py  process_data.py  pyproject.toml  readme.md  readme.txt  requirements.txt  train_model_main.py
Trained AI models/: cnn_pca_final.ckpt  cnn_raw_final.ckpt  mlp_hybrid_features.pkl  pca_mlp.pkl
feature_extraction/: PCA_analysis.m  PCA_data_projection.m  feature_extraction_curv_dstbin.m
signal_processing/: UWB_signal_processing.m  linear2dbm_mhz.m  pkpicker.m  search_subtract_readjust.m
tests/: test_people_counting.py
tools/: CRNN_model.py  connect_db.py  create_json_files.py  model_tools.py  postgresql_operations.py  prediction_function.py  prepare_dataset.py  process_data.py  pyspark_functions.py  read_files.py  visualize_data.py
