[tool.poetry]
name = "people_counting"
version = "0.1.0"
description = ""
authors = ["cristinaa211 <popovici.cristina21@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
torch = "^1.13.1"
pytorch-lightning = "^1.9.0"
mat73 = "^0.59"
torchmetrics = "^0.11.0"
sklearn = "^0.0.post1"
pandas = "^1.5.3"
torchsummary = "^1.5.1"
torchshape = "^0.0.8"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
